--- a/TP2/E2/E2.md
+++ b/TP2/E2/E2.md
@@ -1,4 +1,14 @@
+```
 Understand the code and execute the file
 • Disconnect from the internet and execute the file. What happens? Justify.
+```
+If we don't have access to internet, we can't load the JS file from google with the necessary code to use Google Maps, so if we wan't to emmbeded code from external sites, we have to have connection.
+```
 • Modify the file so the application uses the method Geocoder of google maps. Instead of using Lat and Lng, let the parameter for the name of a city be sent to the server in order to configure where the map is centered.
+```
+```
 • Insert the gadget (third line, script tag) in a frame. What happens with the functionality now? Justify
+
+```
+![](https://i.imgur.com/oKVtOrq.png)
+Not found, because the SOP blocked sources from the others sites if we use iframe.
