--- a/TP3/E1/e1.md
+++ b/TP3/E1/e1.md
@@ -9,3 +9,74 @@ If we use version 1, we can see that we can execute script JS when we insert cod
 So when the php engine build the stored message, we can see in a message the client's cookies.
 ![show cookie with XSS attack](https://i.imgur.com/ErYqIFd.png)
 Mention 2 ways in which this attack could be prevented and implement them in 2 versions of guestbook: guestbookA.php and guestbookB.php.
+
+From php
+
+http://www.funcion13.com/entiende-ataques-xss-aprende-prevenir-php/
+```
+$comentario = trim($_POST["comentario"]);
+
+if (empty($comentario)) {  
+  exit("¡Debes introducir un comentario!");
+}
+// Sanear comentario
+$comentario = strip_tags($comentario);
+
+// Ahora podemos guardarlos
+file_put_contents("comentarios.txt", $comentario, FILE_APPEND);
+
+// Escapamos los comentarios antes de mostrarlos
+$comentarios = file_get_contents("comentarios.txt");
+
+echo htmlspecialchars($comentarios);  
+```
+From JS
+
+http://phpjs.org/functions/strip_tags/
+```
+function strip_tags(input, allowed) {
+  //  discuss at: http://phpjs.org/functions/strip_tags/
+  // original by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+  // improved by: Luke Godfrey
+  // improved by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+  //    input by: Pul
+  //    input by: Alex
+  //    input by: Marc Palau
+  //    input by: Brett Zamir (http://brett-zamir.me)
+  //    input by: Bobby Drake
+  //    input by: Evertjan Garretsen
+  // bugfixed by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+  // bugfixed by: Onno Marsman
+  // bugfixed by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+  // bugfixed by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+  // bugfixed by: Eric Nagel
+  // bugfixed by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+  // bugfixed by: Tomasz Wesolowski
+  //  revised by: Rafał Kukawski (http://blog.kukawski.pl/)
+  //   example 1: strip_tags('<p>Kevin</p> <br /><b>van</b> <i>Zonneveld</i>', '<i><b>');
+  //   returns 1: 'Kevin <b>van</b> <i>Zonneveld</i>'
+  //   example 2: strip_tags('<p>Kevin <img src="someimage.png" onmouseover="someFunction()">van <i>Zonneveld</i></p>', '<p>');
+  //   returns 2: '<p>Kevin van Zonneveld</p>'
+  //   example 3: strip_tags("<a href='http://kevin.vanzonneveld.net'>Kevin van Zonneveld</a>", "<a>");
+  //   returns 3: "<a href='http://kevin.vanzonneveld.net'>Kevin van Zonneveld</a>"
+  //   example 4: strip_tags('1 < 5 5 > 1');
+  //   returns 4: '1 < 5 5 > 1'
+  //   example 5: strip_tags('1 <br/> 1');
+  //   returns 5: '1  1'
+  //   example 6: strip_tags('1 <br/> 1', '<br>');
+  //   returns 6: '1 <br/> 1'
+  //   example 7: strip_tags('1 <br/> 1', '<br><br/>');
+  //   returns 7: '1 <br/> 1'
+
+  allowed = (((allowed || '') + '')
+      .toLowerCase()
+      .match(/<[a-z][a-z0-9]*>/g) || [])
+    .join(''); // making sure the allowed arg is a string containing only tags in lowercase (<a><b><c>)
+  var tags = /<\/?([a-z][a-z0-9]*)\b[^>]*>/gi,
+    commentsAndPhpTags = /<!--[\s\S]*?-->|<\?(?:php)?[\s\S]*?\?>/gi;
+  return input.replace(commentsAndPhpTags, '')
+    .replace(tags, function($0, $1) {
+      return allowed.indexOf('<' + $1.toLowerCase() + '>') > -1 ? $0 : '';
+    });
+}
+```
